--- a/logo.css
+++ b/logo.css
@@ -1,46 +1,55 @@
+html{height:100%;}
 body{
-  display:flex;
-  background:#456;
-  justify-content:center;
-  align-items:center;
+    background:#456;
+    min-height:100vh;
+    display:flex;
+    flex-flow:row wrap;
+    gap:50px;
 }
 
-.logo-container{
-  margin:10px;
-  width:100px;
-  height:100px;
-  display:flex;
-  flex-flow:column nowrap;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
-  color:#eee;
-  background:#345;
-  object-fit:cover;
-  border-radius:10%;
-  box-shadow:2px 2px 4px gold,
-    2px 2px 8px pink,
-    -2px -2px 4px gold,
-    -2px -2px 8px pink;
-  text-shadow:1px 1px 2px green,
-    2px 2px 4px white; 
+label{
+  display:block;
+  color:#ddd;
+  margin:10px 0;
 }
 
 #logos-container{
-  display:flex;
-  flex-flow: row wrap;
-  justify-content:center;
-  align-items:center;
-  width:400px;
-  padding:20px 10px;
-  border:solid white 2px;
+    display:flex;
+    flex-flow: row wrap;
+    justify-content:center;
+    align-items:center;
+    max-width:400px;
+    max-height:400px;
+    padding:20px 10px;
+    border:solid white 2px;
+}
+
+.logo-container{
+    margin:10px;
+    width:100px;
+    height:100px;
+    display:flex;
+    flex-flow:column nowrap;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    color:#eee;
+    background:#345;
+    object-fit:cover;
+    border-radius:10%;
+    box-shadow:2px 2px 4px gold,
+      2px 2px 8px pink,
+      -2px -2px 4px gold,
+      -2px -2px 8px pink;
+    text-shadow:1px 1px 2px green,
+      2px 2px 4px white; 
 }
 
 img{
-  width:100%;
-  height:100%;
-  border-radius:10%;
- transition: width 2s ease-in-out, height 2s ease-in-out;
+    width:100%;
+    height:100%;
+    border-radius:10%;
+  transition: width 2s ease-in-out, height 2s ease-in-out;
 }
 
 #feature.resizeSmall{
